crates/shiplog-workstreams/tests/snapshots/receipt_policy_snapshot__receipt_limits_per_kind.snap
---
source: crates/shiplog-workstreams/tests/receipt_policy_snapshot.rs
assertion_line: 31
expression: output
---
PullRequest: 18446744073709551615
Review: 5
Manual: 7
